fetch the data from db of respective menus

--- a/src/main/resources/templates/calculation.html
+++ b/src/main/resources/templates/calculation.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>Thanks For Visiting</h1>
+<h1><font color='Green'>Thanks For Visiting</font></h1>
 </body>
 </html>
