--- a/src/main/resources/templates/lunch.html
+++ b/src/main/resources/templates/lunch.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Lunch Menu Page</title>
 </head>
 <body>
 <form action="/calculation">
@@ -10,10 +10,10 @@
 	<table border="1" width="30%" height="30%">
 		
 			<tr>
-				<th><font color='Red'>Id</font></th>
-				<th><font color='Red'>Name</font></th>
+				<th><font  color='Yellow'>Id</font></th>
+				<th><font color='Green'>Name</font></th>
 				<th><font color='Red'>Price</font></th>
-				<th><font color='Red'>Select</font></th>
+				<th><font color='Pink'>Select</font></th>
 			</tr>
 			
 		<tbody>
