--- a/src/main/resources/templates/morning.html
+++ b/src/main/resources/templates/morning.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Morning Menu Page</title>
 </head>
 <body>
 <form action="/calculation">
@@ -10,10 +10,10 @@
 	<table border="1" width="30%" height="30%">
 		
 			<tr>
-				<th><font color='Red'>Id</font></th>
-				<th><font color='Red'>Name</font></th>
+				<th><font  color='Yellow'>Id</font></th>
+				<th><font color='Green'>Name</font></th>
 				<th><font color='Red'>Price</font></th>
-				<th><font color='Red'>Select</font></th>
+				<th><font color='Pink'>Select</font></th>
 			</tr>
 			
 		<tbody>
@@ -23,6 +23,7 @@
 				<td th:text="${morningMenu.price}"></td>
 				<td><input type="checkbox" name="selected" th:value="${morningMenu.id}"></td>
 			</tr>
+			
 			<tr>
 				<td colspan="3"><input type="submit" value="Submit"></input></td>
 			   <td colspan="3"><input type="reset" value="Reset"></input></td>
